--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -14,11 +14,11 @@ The four steps of a Qiskit pattern are as follows:
 - [**Execute** on target hardware](./execute-on-hardware)
 - [**Post-process** results](./post-process-results)
 
-![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). All steps except 'Execute on hardware' use the Qiskit SDK. Optimizing for hardware additionally uses the Qiskit Transpiler Service.  Executing on hardware uses only the Qiskit Runtime Service.](/images/qiskit-patterns/patterns.svg)
+![All Qiskit pattern steps are shown (Map the problem, Optimize for hardware, Execute on hardware, and Post-process results). All steps except 'Execute on hardware' use the Qiskit SDK. Optimizing for hardware additionally uses the Qiskit Transpiler Service.  Executing on hardware uses only the Qiskit Runtime Service.](/images/qiskit-patterns/patterns.svg)
 
 Each step is detailed in the sections below.
 
-## Map problem to quantum circuits and operators
+## Map the problem to quantum circuits and operators
 
 
 This step describes how a user starts with a classical problem and figures out how to map it to a quantum computer. For example, in applications such as chemistry and quantum simulation, this step generally involves constructing a quantum circuit representing the Hamiltonian you are attempting to solve. During this step, for certain problems, it might also be desirable to specify the mapping of the problem onto qubits in the heavy-hex (or gross) lattice of IBM&reg; hardware from the outset if the structure of the problem lends itself to optimization earlier. It is also worth considering at this point what the outcome of the particular algorithm will be in preparation for the later execute step - for example, if the desired outcome involves inferring correlation functions using Hadamard tests, you might prepare to use Sampler, whereas specifying observables would use the Estimator and could provide many error mitigation options.
@@ -57,7 +57,7 @@ As the field moves from bespoke circuit construction to utility-scale workflows,
 
 ### Guides focused on one or more pattern steps
 
-* [Map problem to quantum circuits and operators](/guides/map-problem-to-circuits)
+* [Map the problem to quantum circuits and operators](/guides/map-problem-to-circuits)
 * [Optimize for target hardware](/guides/optimize-for-hardware)
 * [Execute on target hardware](/guides/execute-on-hardware)
 * [Post-process results](/guides/post-process-results)
@@ -78,7 +78,7 @@ As the field moves from bespoke circuit construction to utility-scale workflows,
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-  -  Explore each step in a Qiskit pattern in more detail, starting with [Map problem to quantum circuits and operators](./map-problem-to-circuits).
+  -  Explore each step in a Qiskit pattern in more detail, starting with [Map the problem to quantum circuits and operators](./map-problem-to-circuits).
   -  Run a full example of a Qiskit pattern in the [CHSH Inequality tutorial](https://learning.quantum.ibm.com/tutorial/chsh-inequality).
 </Admonition>
 
