--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -1,13 +1,13 @@
 ---
-title: Map problem to quantum circuits and operators
+title: Map the problem to quantum circuits and operators
 description: Take a classical problem and map it to run on a quantum computer.
 ---
 
-# Map problem to quantum circuits and operators
+# Map the problem to quantum circuits and operators
 
-![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). The 'Map problem' step is emphasized.  This step uses the Qiskit SDK.](/images/qiskit-patterns/map-problem.svg)
+![All Qiskit pattern steps are shown (Map the problem, Optimize for hardware, Execute on hardware, and Post-process results). The 'Map the problem' step is emphasized.  This step uses the Qiskit SDK.](/images/qiskit-patterns/map-problem.svg)
 
-The "map problem to quantum circuits and operators" step of a Qiskit pattern describes how a user starts with a classical
+The "map the problem to quantum circuits and operators" step of a Qiskit pattern describes how a user starts with a classical
 problem and figures out how to map it to a quantum computer.
 
 For example, in applications such as chemistry and quantum simulation, this step generally involves
