--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -38,6 +38,14 @@ Example of citing IBM Quantum Composer:
 
 > IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
 
+## What happened to Qiskit Aer, Qiskit Nature, Qiskit Experiments, etc.?
+
+Before the release of the Qiskit SDK v1.0, Qiskit was comprised of many different Python distributions such as: `qiskit-terra`, the compiler core; `qiskit-aer`, the high-performance simulator; the original IBM Quantum™ provider; and several now-obsolete packages providing particular exploratory algorithmic or experiment-running features. 
+
+These separate software packages were combined together into what was called the Qiskit *metapackage* which allowed users to install all of these components together through `pip install qiskit`. This metapackage architecture was removed with the release of the Qiskit SDK v1.0 and each of the individual software distributions need to be installed separately. 
+
+Check out the [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) to find the package you may be looking for. You can also read the [1.0 migration guide](./migration-guides/qiskit-1.0-installation#why-these-changes-happened) for more information about why this change happened.
+
 ## Why do I receive the error message "AttributeError: `QuantumCircuit` object has no attribute `save_state`" when using `save_*`method on a circuit?
   
 The `save_*` instructions are part of Qiskit Aer project,
