--- a/docs/api/qiskit-ibm-transpiler/0.9/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.9/qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.mdx
@@ -1,17 +1,17 @@
 ---
-title: AIPermutationSynthesis (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AIPermutationSynthesis in the latest version of qiskit-ibm-transpiler
+title: AILinearFunctionSynthesis (v0.9)
+description: API reference for qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis in qiskit-ibm-transpiler v0.9
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
+python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 ---
 
-# AIPermutationSynthesis
+# AILinearFunctionSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L314-L358" signature="qiskit_ibm_transpiler.ai.AIPermutationSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L260-L310" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
-  Synthesis for Permutation circuits (blocks of SWAP gates). Currently available for 65, 33, and 27 qubit blocks.
+  Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.
 
   **Parameters**
 
@@ -23,7 +23,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### is\_analysis\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.is_analysis_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.is_analysis_pass">
     Check if the pass is an analysis pass.
 
     If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
@@ -31,7 +31,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### is\_transformation\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.is_transformation_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.is_transformation_pass">
     Check if the pass is a transformation pass.
 
     If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
@@ -41,7 +41,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### execute
 
-  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
@@ -61,7 +61,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### name
 
-  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -71,12 +71,12 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L187-L204" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L186-L203" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
 
-    **dag** ([*DAGCircuit*](/api/qiskit/qiskit.dagcircuit.DAGCircuit "(in Qiskit v1.3)")) – the dag on which the pass is run.
+    **dag** (*DAGCircuit*) – the dag on which the pass is run.
 
     **Raises**
 
@@ -85,11 +85,11 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L140-L185" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/synthesis.py#L139-L184" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
-  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
