--- a/docs/api/qiskit-ibm-transpiler/0.9/qiskit_ibm_transpiler.ai.CollectPermutations.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.9/qiskit_ibm_transpiler.ai.CollectPermutations.mdx
@@ -1,6 +1,6 @@
 ---
-title: CollectPermutations (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.CollectPermutations in the latest version of qiskit-ibm-transpiler
+title: CollectPermutations (v0.9)
+description: API reference for qiskit_ibm_transpiler.ai.CollectPermutations in qiskit-ibm-transpiler v0.9
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
 # CollectPermutations
 
-<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/collection.py#L340-L377" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/collection.py#L341-L378" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
   Collects blocks of SWAP circuits as Permutations.
@@ -76,7 +76,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/collection.py#L233-L257" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.9/qiskit_ibm_transpiler/ai/collection.py#L234-L258" signature="run(dag)">
     Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit
 
     **Returns**
